--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,10 @@
   background: var(--priamry);
   color: var(--dark-alt);
 }
+
+.task-card {
+  background-color: var(--light);
+  max-width: 300px;
+  display: flex;
+  
+}
