btn style adjusted

--- a/src/App.css
+++ b/src/App.css
@@ -73,23 +73,43 @@
   box-shadow: var(--shadow);
   display: flex;
   flex-direction: column;
-  max-width: 200px;
-  height: 100px;
-  border-radius: 30px;
+  max-width: 300px;
+  min-height: 100px;
   color: var(--dark-alt);
   padding: 8px;
   text-align: center;
 }
 
-.task-desc-container{
-  margin-top: 5px;
+.task-title-container h1 {
+  text-align: left;
 }
+
+.task-title-container p {
+  text-align: left;
+}
+
 
 .task-title{
-  font-size: 16px;
-  margin: 8px;
+  font-size: 18px;
+  margin-bottom: 8px;
   display: flex;
   justify-content: space-evenly;
+  
 }
 
+.delete-btn-container {
+  text-align: right;
+}
 
+.delete {
+  background-color: var(--priamry);
+  border: none;
+  color: var(--light);
+  font-weight: 500;
+  height: 25px;
+  border-radius: 10px;
+  width: 50px;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+}
